@@ -6,7 +6,7 @@
 
 = qrtool-decode(1)
 // Specify in UTC.
-:docdate: 2023-03-16
+:docdate: 2023-06-23
 :doctype: manpage
 ifdef::revnumber[:mansource: qrtool {revnumber}]
 :manmanual: General Commands Manual
@@ -86,6 +86,10 @@ _IMAGE_::
     *pnm*::::
 
       PNM.
+
+    *qoi*::::
+
+      Quite OK Image Format.
 
 ifdef::decode-from-svg[]
     *svg*::::
